# tauri-fastapi-template

./: .gitignore  README.md  package.json  pnpm-lock.yaml
fastapi_backend/: pyproject.toml
fastapi_backend/app/: __init__.py  main.py
src/: App.tsx
src-tauri/: Cargo.toml  fastapi-config.json  tauri.conf.json
src-tauri/src/: .env  lib.rs  main.rs
